Update index.html in Master on GitHub

--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
       <title>Coole neue Urlaubswebseite! </title>
    </head>
-  <body style="background-color: rgb(255, 255, 255)">
+  <body style="background-color: rgb(222, 233, 244)">
      <h1>Das wird eine coole Urlaubswebseite! </h1>
      <p style="color: red;">Ein kleiner Absatz.</p>
      <p>In Europa gibt es viele gute Reiseziele</p>
      <p>Nochmal mehr Inhalt</p>
+     <p> ---- Dies ist das index.html file in GitHub ----</p>
      <a href="#">Nach oben springen</a>
 
   </body>
