Small typo (corrected in branch)

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       <title>Coole neue Urlaubswebseite! </title>
    </head>
   <body style="background-color: rgb(222, 233, 244)">
-     <h1>Das wird eine coole Urlaubswebseite! </h1>
+     <h1>Das wird eine coole Urlaubs-Webseite! </h1>
      <p style="color: red;">Ein kleiner Absatz.</p>
      <p>In Europa gibt es viele gute Reiseziele</p>
      <p>Nochmal mehr Inhalt</p>
