--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
      <p>In Europa gibt es viele gute Reiseziele</p>
      <p>Nochmal mehr Inhalt</p>
      <p> ---- Dies ist das index.html file in GitHub ----</p>
-     <p> welches nun am 15.02. geändert wurde ... 
-         und nun gerade nochmals ....</p>
+     <p> welches nun am 15.02. geändert wurde ... </p>
      <p style="color: blue;">Ende des Absatzes</p>
      <a href="#">Nach oben springen</a>
 
